--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE HTML>
-<!--
-	Multiverse by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Multiverse by HTML5 UP</title>
+		<title>The Japanese Co</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
+	<script>
+"use strict";
+
+!function() {
+  var t = window.driftt = window.drift = window.driftt || [];
+  if (!t.init) {
+    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+    t.factory = function(e) {
+      return function() {
+        var n = Array.prototype.slice.call(arguments);
+        return n.unshift(e), t.push(n), t;
+      };
+    }, t.methods.forEach(function(e) {
+      t[e] = t.factory(e);
+    }), t.load = function(t) {
+      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+      var i = document.getElementsByTagName("script")[0];
+      i.parentNode.insertBefore(o, i);
+    };
+  }
+}();
+drift.SNIPPET_VERSION = '0.3.1';
+drift.load('zg9u25tr92gc');
+</script>
+<!-- End of Async Drift Code -->
 	<body class="is-preload">
 
 		<!-- Wrapper -->
@@ -140,32 +163,8 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<!-- Start of Async Drift Code -->
-			<script>
-				"use strict";
-				
-				!function() {
-				  var t = window.driftt = window.drift = window.driftt || [];
-				  if (!t.init) {
-					if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-					t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-					t.factory = function(e) {
-					  return function() {
-						var n = Array.prototype.slice.call(arguments);
-						return n.unshift(e), t.push(n), t;
-					  };
-					}, t.methods.forEach(function(e) {
-					  t[e] = t.factory(e);
-					}), t.load = function(t) {
-					  var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-					  o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-					  var i = document.getElementsByTagName("script")[0];
-					  i.parentNode.insertBefore(o, i);
-					};
-				  }
-				}();
-				drift.SNIPPET_VERSION = '0.3.1';
-				drift.load('zg9u25tr92gc');
-				</script>
+			<!-- Start of Async Drift Code -->
+
 	<!-- End of Async Drift Code -->
 
 	</body>
